[gd_scene load_steps=4 format=3 uid="uid://dprho8jmoqejn"]

[ext_resource type="Script" uid="uid://bhdwfypnqwea1" path="res://assets/player/player_controller.gd" id="1_h6syq"]
[ext_resource type="Texture2D" uid="uid://d24emgns8mtm2" path="res://assets/sprites/white.png" id="2_v2miy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7tmfp"]
size = Vector2(32, 56)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_h6syq")

[node name="BoundingBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_7tmfp")
debug_color = Color(1.540184e-06, 0.6406053, 0.3520957, 0.41960785)

[node name="Rotatable" type="Node2D" parent="."]
z_index = 1

[node name="Cape" type="Node2D" parent="Rotatable"]
position = Vector2(-7, -17)

[node name="Wings" type="Sprite2D" parent="Rotatable/Cape"]
modulate = Color(0.9507429, 0, 0.26910797, 1)
position = Vector2(-10.5, 17)
scale = Vector2(0.84375006, 1.25)
texture = ExtResource("2_v2miy")

[node name="Antena1" type="Node2D" parent="Rotatable"]
position = Vector2(-7, -25)

[node name="base" type="Sprite2D" parent="Rotatable/Antena1"]
modulate = Color(0.11858138, 0.11858138, 0.11858138, 1)
position = Vector2(-1.000001, -11)
rotation = -0.22478293
scale = Vector2(0.16000092, 0.6078811)
texture = ExtResource("2_v2miy")

[node name="bob" type="Sprite2D" parent="Rotatable/Antena1"]
modulate = Color(0.11858138, 0.11858138, 0.11858138, 1)
position = Vector2(-4.9312773, -18.03883)
rotation = -0.40934804
scale = Vector2(0.3038461, 0.25670004)
texture = ExtResource("2_v2miy")

[node name="Antena2" type="Node2D" parent="Rotatable"]
position = Vector2(7, -24)

[node name="bob" type="Sprite2D" parent="Rotatable/Antena2"]
modulate = Color(0.11858138, 0.11858138, 0.11858138, 1)
position = Vector2(5.999999, -19.999996)
rotation = 0.19009504
scale = Vector2(0.30384612, 0.2567)
texture = ExtResource("2_v2miy")

[node name="base" type="Sprite2D" parent="Rotatable/Antena2"]
modulate = Color(0.11858138, 0.11858138, 0.11858138, 1)
position = Vector2(2, -12.000004)
rotation = 0.19530201
scale = Vector2(0.16000092, 0.6078811)
texture = ExtResource("2_v2miy")

[node name="Body" type="Sprite2D" parent="Rotatable"]
modulate = Color(0.11858138, 0.11858138, 0.11858138, 1)
scale = Vector2(1, 1.75)
texture = ExtResource("2_v2miy")

[node name="Eye1" type="Node2D" parent="Rotatable"]
position = Vector2(-6, -17)

[node name="bal" type="Sprite2D" parent="Rotatable/Eye1"]
modulate = Color(0.9844983, 0.960059, 0.9895049, 1)
position = Vector2(16, -1.9073486e-06)
scale = Vector2(0.3284411, 0.27979296)
texture = ExtResource("2_v2miy")

[node name="Eye2" type="Node2D" parent="Rotatable"]
position = Vector2(10, -17)

[node name="ball" type="Sprite2D" parent="Rotatable/Eye2"]
modulate = Color(0.9844983, 0.960059, 0.9895049, 1)
position = Vector2(-15.999999, -1.9073486e-06)
scale = Vector2(0.3284411, 0.27979296)
texture = ExtResource("2_v2miy")
